--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/Users/amirlevi/.local/share/virtualenvs/consumer_physics_spectra_pipeline-0bWm3HcC/bin/python",
+    "python.pythonPath": "C:\\Users\\Development\\.virtualenvs\\consumer_physics_spectra_pipeline-atjw7v7Q\\Scripts\\python.exe",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
